# use_ai_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config_GBDT_example.json  test.csv
AI-Users-Book/: book.toml
AI-Users-Book/src/: README.md  SUMMARY.md
AI-Users-Book/src/blog/: 1.md  README.md
AI-Users-Book/src/calc/: README.md  ctx.md
AI-Users-Book/src/stage/: output.md
AI-Users-Book/src/tooling/: useai.md
AI-Users-Book/src/transformer/: README.md  db.md
crates/core/lib-calculator/: Cargo.toml  README.md
crates/core/lib-operator/: Cargo.toml
crates/core/lib-proc_macros/: Cargo.toml
crates/core/lib-stage/: Cargo.toml
crates/core/lib-store/: Cargo.toml
crates/core/lib-transformer/: Cargo.toml  README.md
crates/core/playground/: Cargo.toml  README.md
crates/lib-core/: Cargo.toml  README.md
crates/lib-core/src/: error.rs  lib.rs
crates/lib-model/: Cargo.toml  README.md  ai_config_example.json
crates/lib-staging/: Cargo.toml  README.md
crates/lib-test/: Cargo.toml  README.md
crates/lib-test/src/: main.rs
crates/use-ai/: Cargo.toml
crates/use-ai/src/: config_menu.rs  error.rs  main.rs  start_menu.rs
docs/: book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/book/blog/: 0.html  1.html  2.html  3.html  index.html
docs/book/calc/: config.html  index.html  operation.html
docs/book/stage/: config.html  index.html  input.html  output.html  transfer.html
docs/book/tooling/: index.html  testai.html  useai.html
docs/book/transformer/: config.html  (+2 more)
docs/src/: SUMMARY.md
(+49 files in other folders)
