[workspace]
resolver = "2"
members = [
    # These are the core libarys
    "crates/core/lib-calculator",
    "crates/core/lib-stage",
    "crates/core/lib-store",
    "crates/core/playground",

    # Tools for exploring options and a demonstration of an imlpemantation in the form of CLIs
    "crates/use-ai",
]

[profile.release]
debug = true